# The_General

./: .gitignore  app.py  main.py  pyproject.toml
src/: document_parsing.py  utils.py
src/api/router/: api_router.py  chat.py  home.py
src/core/: cache.json  chat.py
src/frontend/: index.html
src/rag/: rag_service.py  sent_transformer.py
src/services/: auth_grok.py  auth_qdrant.py  config_sentence_transformer.py
src/ui/: chat.html  index.html  main.js
