[project]
name = "ai-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "deeprajd"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "qdrant-client (>=1.16.1,<2.0.0)",
    "fastapi (>=0.123.9,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "tokenizers (>=0.22.1,<0.23.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "spotipy (>=2.25.2,<3.0.0)",
    "pdfplumber (>=0.11.8,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
